# aurora-swarm-lab

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODEx_BUILDLOG.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  SECURITY.md  pyproject.toml
app/: __init__.py
docs/: HANDOFF-2026-02-20-cleanup.md  architecture.md  handoff_playbook.md  memory_cheatsheet_sv.md  voice_gallery_schema.md
scripts/: aurora_mcp_server.sh  aurora_workers.sh  bootstrap_postgres.sh  bootstrap_snowflake.sql  dropbox_watch.sh  health_check.py  install_autostart_mac.sh  intake_ui_server.py  intake_ui_server.sh  mobile_aurora.sh  obsidian_watch.sh  run_workers.sh  uninstall_autostart_mac.sh
tests/: conftest.py  test_chunk_summaries.py  test_chunk_text.py  test_chunk_transcript.py  test_cli_ask_remember.py  test_cli_memory_stats.py  test_context_handoff.py  test_denoise_audio.py  test_diarize_assignment.py  test_doc_extract.py  test_dotenv_and_packages.py  test_egress_policy.py  test_embed_chunks.py  test_embed_voice_gallery.py  test_embedding_store.py  test_enrich_chunks_module.py  test_enrich_doc_module.py  test_graph_extract_entities.py  test_graph_extract_relations.py  test_graph_from_voice_gallery.py  test_graph_ontology.py  test_graph_ontology_rules.py  test_graph_publish.py  test_graph_retrieve.py  test_health_check.py  test_ingest_auto.py  test_initiatives_pipeline.py  test_initiatives_report.py  test_intake_dropbox.py  test_intake_image.py  test_intake_obsidian.py  test_intake_url.py  test_intake_youtube.py  test_library.py  test_manifest.py  test_mcp_server.py  (+25 more)
(+115 files in other folders)
