[project]
name = "aurora-swarm-lab"
version = "0.1.0"
description = "Local-first AI assistant lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
]

[project.scripts]
aurora = "app.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001"]  # TODO: Fix in dedicated sessions (E501=107 lines, I001=75 import blocks)
