[project]
name = "aurora-swarm-lab"
version = "0.1.0"
description = "Local-first AI assistant lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "python-dotenv>=1.0",
  "yt-dlp>=2024.1",
  "python-docx>=1.1",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.0"]

[project.scripts]
aurora = "app.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001"]  # TODO: Fix in dedicated sessions (E501=107 lines, I001=75 import blocks)
